# python-repo-template

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
src/example_pkg/: __init__.py  core.py
tests/: test_core.py
