[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example-pkg"
version = "0.1.0"
description = "TODO: one-line description of what this package does."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.optional-dependencies]
test = [
  "coverage[toml]>=7.6",
  "pytest>=8.3",
  "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/example_pkg"]

[tool.coverage.run]
branch = true
source = ["example_pkg"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
